# recallfs

./: .gitignore  AGENTS.md  ops.sh  rules.md
.grok/skills/leetcode/: SKILL.md
designs/: distributed-heartbeat-management.md  http-port-manager.md  lab-storyboard-sota.md
learning/: README.md
learning/algorithms/: .gitignore  AGENTS.md  Cargo.toml  README.md  WORKFLOW.md  catalog.md  progress.md
learning/algorithms/.cargo/: config.toml
learning/algorithms/assets/: lab.css  lab.js
learning/algorithms/patterns/: README.md  binary-partition-median.md  hashmap-complement.md  linked-list-carry.md  sliding-window-unique.md
learning/algorithms/problems/0001-two-sum/: Cargo.toml  analysis.md  learn.html  meta.md  notes.md
learning/algorithms/problems/0001-two-sum/src/: lib.rs
learning/algorithms/problems/0002-add-two-numbers/: Cargo.toml  analysis.md  learn.html  meta.md  notes.md
learning/algorithms/problems/0002-add-two-numbers/src/: lib.rs
learning/algorithms/problems/0003-longest-substring-without-repeating-characters/: Cargo.toml  analysis.md  learn.html  meta.md  notes.md
learning/algorithms/problems/0003-longest-substring-without-repeating-characters/src/: lib.rs
learning/algorithms/problems/0004-median-of-two-sorted-arrays/: Cargo.toml  analysis.md  learn.html  meta.md  notes.md
learning/algorithms/problems/0004-median-of-two-sorted-arrays/src/: lib.rs
learning/algorithms/problems/0005-longest-palindromic-substring/: Cargo.toml  analysis.md  learn.html  meta.md  notes.md
learning/algorithms/problems/0005-longest-palindromic-substring/src/: lib.rs
learning/algorithms/scripts/: new-problem.sh  optimize-assets.sh  smoke-check.sh
learning/algorithms/templates/: Cargo.toml  analysis.md  learn.html  lib.rs  meta.md  notes.md
learning/sources/: 20260611-powersort.md  20260611-radix-top-k.md
learning/studies/20260611-powersort/: README.md  exploration.md  source.md
learning/studies/20260611-powersort/demo/: CMakeLists.txt  README.md
learning/studies/20260611-powersort/demo/src/: powersort_demo.cpp
learning/studies/20260611-radix-top-k/: README.md  exploration.md  source.md
learning/studies/20260611-radix-top-k/demo/: CMakeLists.txt  README.md
learning/studies/20260611-radix-top-k/demo/src/: radix_top_k.cpp
learning/templates/: study-template.md
projects/agent/docs/: tide-dev-agent-core-and-frameworks.md
projects/s-ui/: README.md
projects/xiaohei-local/: .gitignore  README.md  pyproject.toml
projects/xiaohei-local/examples/: shots-example.json
projects/xiaohei-local/src/xiaohei_local/: __init__.py  canvas.py  character.py  character_extra.py  cli.py  fonts.py  render.py  scenes.py  spec.py  style.py  xiaohei.py
skills/: api.md  bench.md  c++.md  doc.md  gdb.md  learn.md  parse-args.md  pb.md  preempt.md  redo&undo.md  shell.md  sql.md  tmp.md  tmux.md  tool.md
tools/http-port-manager/: README.md  config.json  install.sh  server.py  sync.sh
(+92 files in other folders)
