[workspace]
resolver = "2"
members = [
    "problems/0001-two-sum",
    "problems/0002-add-two-numbers",
    "problems/0003-longest-substring-without-repeating-characters",
    "problems/0004-median-of-two-sorted-arrays",
    "problems/0005-longest-palindromic-substring",
]
# new-problem.sh appends: "problems/NNNN-slug"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"
