[project]
name = "xiaohei-local"
version = "0.7.0"
description = "Local-first 16:9 illustrations — 小黄狗 default, 小黑 optional (uv-managed)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[project.scripts]
xiaohei-local = "xiaohei_local.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaohei_local"]

[tool.hatch.build.targets.wheel.sources]
"xiaohei_local" = "src/xiaohei_local"

[tool.uv]
package = true
